tests/negative/Test14.sp
(* Testing wrong number of parameters *)
abs:Int where abs > a (val:Int);
abs(3,4);
